# AIdento

projeto_computacional_01/: pyproject.toml
projeto_computacional_01/projeto_computacional_01/: ant_colony.py  gen_alg.py  genetic.py  graph.py  main.py  trab1IA.ipynb
