[tool.poetry]
name = "projeto-computacional-01"
version = "0.1.0"
description = ""
authors = ["ArtroxGabriel <artroxgabriel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
pandas = "^2.2.3"
pytest = "^8.3.4"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
